# realstt

./: .gitignore  README.md  pyproject.toml  techstack.md  techstack.yml
realstt/: service.py  train.py
realstt/audio_in/: app.py  index.html
realstt/runnables/: audio_transcribe.py
